# advent-of-code

./: .rubocop.yml  CODE_OF_CONDUCT.md  Cargo.toml  Gemfile  README.md  advent_of_code_2020.gemspec  build.rs  justfile
2016/: .gitignore
2017/: .rubocop.yml
2019/: Cargo.toml  build.rs
2019/.github/: dependabot.yml
2019/src/: day03.rs  day06.rs  day10.rs  day21.rs  main.rs
2019/src/day11/: colour.rs  direction.rs  mod.rs  rotation.rs  state.rs
2019/src/day14/: chemical.rs
2019/src/day15/: mod.rs
2019/src/day16/: mod.rs
2019/src/day17/: direction.rs  instruction.rs
2019/src/day18/: maze.rs  route.rs
2019/src/day19/: beam.rs  mod.rs  scan.rs
2019/src/day20/: maze.rs
2019/src/day22/: step.rs
2019/src/day23/: mod.rs  node.rs
2019/src/day24/: mod.rs
2019/src/intcode/: mod.rs  mode.rs  program.rs
2020/: .rubocop.yml  Gemfile  advent_of_code_2020.gemspec
2021/: Cargo.toml  justfile  renovate.json
2022/: Cargo.toml  justfile
day01/: Cargo.toml
day02/: Cargo.toml
day03/: Cargo.toml
day04/: Cargo.toml
day05/: Cargo.toml
day06/: Cargo.toml
day07/: Cargo.toml
day09/: Cargo.toml
day10/: Cargo.toml
day13/: Cargo.toml
day14/: Cargo.toml
day15/: Cargo.toml
day16/: Cargo.toml
day18/: Cargo.toml
day19/: Cargo.toml
day20/: Cargo.toml
day21/: Cargo.toml
day22/: Cargo.toml
day24/: Cargo.toml
exe/: aoc2020
fixtures/: day08a.txt
lib/: advent_of_code_2020.rb
spec/: advent_of_code_2020_spec.rb  spec_helper.rb
src/: command.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  main.rs  (+7 more)
(+509 files in other folders)
