[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Matt Thomson <mattjohnthomson@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
bytecount = "0.6"
fixedbitset = "0.4"
itertools = "0.10"
modinverse = "0.1"
num = "0.4"
pathfinding = "2.1"
permutohedron = "0.2"
structopt = "0.3"
